promtail/promtail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promtail-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: promtail.seyedmahdisheikh.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: promtail-service
            port:
              number: 9080
